--- a/archived/henschel/zcatoggleTest/Makefile
+++ b/archived/henschel/zcatoggleTest/Makefile
@@ -2,7 +2,8 @@ CC = icc
 CFLAGS =-lrt -Fa -O0
 CFLAGSZCA = -lelf libzca-toggle.a
 CFLAGSDYN = libdynaprof.a
-all: 01_emptyFunction.exe 01_emptyFunctionParallel.exe 02_notActivatedNotifyFunction.exe 02_notActivatedNotifyFunctionParallel.exe 03_ActivatedNotifyFunction.exe 03_ActivatedNotifyFunctionParallel.exe 04_emptyLoop.exe 04_emptyLoopParallel.exe 05_notActivatedNotifyLoop.exe 05_notActivatedNotifyLoopParallel.exe 06_ActivatedNotifyLoop.exe 06_ActivatedNotifyLoopParallel.exe
+#all: 01_emptyFunction.exe 01_emptyFunctionParallel.exe 02_notActivatedNotifyFunction.exe 02_notActivatedNotifyFunctionParallel.exe 03_ActivatedNotifyFunction.exe 03_ActivatedNotifyFunctionParallel.exe 04_emptyLoop.exe 04_emptyLoopParallel.exe 05_notActivatedNotifyLoop.exe 05_notActivatedNotifyLoopParallel.exe 06_ActivatedNotifyLoop.exe 06_ActivatedNotifyLoopParallel.exe
+all : 13_ActivatedNotifyFunction.exe 13_ActivatedNotifyFunctionParallel.exe 14_ActivatedNotifyLoop.exe 14_ActivatedNotifyLoopParallel.exe
 
 01_emptyFunction.exe: 01_emptyFunction.cpp
 	$(CC) $(CFLAGS) 01_emptyFunction.cpp -o 01_emptyFunction.exe
@@ -40,5 +41,17 @@ all: 01_emptyFunction.exe 01_emptyFunctionParallel.exe 02_notActivatedNotifyFunc
 06_ActivatedNotifyLoopParallel.exe: 06_ActivatedNotifyLoop.cpp
 	$(CC) $(CFLAGS) -openmp 06_ActivatedNotifyLoop.cpp $(CFLAGSZCA) -o 06_ActivatedNotifyLoopParallel.exe
 
+13_ActivatedNotifyFunction.exe: 13_ActivatedNotifyFunction.cpp
+	$(CC) $(CFLAGS) 13_ActivatedNotifyFunction.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 13_ActivatedNotifyFunction.exe
+
+13_ActivatedNotifyFunctionParallel.exe: 13_ActivatedNotifyFunction.cpp
+	$(CC) $(CFLAGS) -openmp 13_ActivatedNotifyFunction.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 13_ActivatedNotifyFunctionParallel.exe
+
+14_ActivatedNotifyLoop.exe: 14_ActivatedNotifyLoop.cpp
+	$(CC) $(CFLAGS) 14_ActivatedNotifyLoop.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 14_ActivatedNotifyLoop.exe
+
+14_ActivatedNotifyLoopParallel.exe: 14_ActivatedNotifyLoop.cpp
+	$(CC) $(CFLAGS) -openmp 14_ActivatedNotifyLoop.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 14_ActivatedNotifyLoopParallel.exe
+
 clean:
-	rm -f *.exe *.o *.s
+	rm -f *.exe *.o *.s prof.out
