--- a/archived/henschel/zcatoggleTest/Makefile
+++ b/archived/henschel/zcatoggleTest/Makefile
@@ -5,7 +5,8 @@ CFLAGSDYN = libdynaprof.a
 #all: 01_emptyFunction.exe 01_emptyFunctionParallel.exe 02_notActivatedNotifyFunction.exe 02_notActivatedNotifyFunctionParallel.exe 03_ActivatedNotifyFunction.exe 03_ActivatedNotifyFunctionParallel.exe 04_emptyLoop.exe 04_emptyLoopParallel.exe 05_notActivatedNotifyLoop.exe 05_notActivatedNotifyLoopParallel.exe 06_ActivatedNotifyLoop.exe 06_ActivatedNotifyLoopParallel.exe
 #all : 13_ActivatedNotifyFunction.exe 13_ActivatedNotifyFunctionParallel.exe 14_ActivatedNotifyLoop.exe 14_ActivatedNotifyLoopParallel.exe
 #all: 23_ActivatedNotifyFunction.exe 23_ActivatedNotifyFunctionParallel.exe
-all: 31_StartProfilerOverhead.exe
+#all: 31_StartProfilerOverhead.exe
+all: 13_h264.exe 13_h264Parallel.exe
 
 01_emptyFunction.exe: 01_emptyFunction.cpp
 	$(CC) $(CFLAGS) 01_emptyFunction.cpp -o 01_emptyFunction.exe
@@ -48,6 +49,12 @@ all: 31_StartProfilerOverhead.exe
 
 13_ActivatedNotifyFunctionParallel.exe: 13_ActivatedNotifyFunction.cpp
 	$(CC) $(CFLAGS) -openmp 13_ActivatedNotifyFunction.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 13_ActivatedNotifyFunctionParallel.exe
+
+13_h264.exe: 13_h264.cpp
+	$(CC) $(CFLAGS) 13_h264.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 13_h264.exe
+
+13_h264Parallel.exe: 13_h264.cpp
+	$(CC) $(CFLAGS) -openmp 13_h264.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 13_h264Parallel.exe
 
 14_ActivatedNotifyLoop.exe: 14_ActivatedNotifyLoop.cpp
 	$(CC) $(CFLAGS) 14_ActivatedNotifyLoop.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 14_ActivatedNotifyLoop.exe
