--- a/Plotting/Plotting.cabal
+++ b/Plotting/Plotting.cabal
@@ -69,3 +69,28 @@ executable Plotting
   -- Base language which the package is written in.
   default-language:    Haskell2010
   
+
+
+executable Overhead
+  -- .hs or .lhs file containing the Main module.
+  main-is:             Overhead.hs
+  
+  -- Modules included in this executable, other than Main.
+  -- other-modules:       
+  
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:    
+  
+  -- Other library packages from which modules are imported.
+  build-depends: base >=4.5 && <4.8
+               , hsbencher >= 1.8.0.7
+               , hsbencher-fusion >= 0.1.0.2
+               , hsbencher-analytics >= 0.1.0.0 
+               , handa-gdata >= 0.6.9.2               
+  
+  -- Directories containing source files.
+  -- hs-source-dirs:      
+  
+  -- Base language which the package is written in.
+  default-language:    Haskell2010
+  
