Added new microbenchmark for measuring zca_toggle init overhead

--- a/microbenchmarks/zcatoggle/initOverhead/Makefile
+++ b/microbenchmarks/zcatoggle/initOverhead/Makefile
@@ -4,6 +4,9 @@ CFLAGSZCA = -lelf libzca-toggle.a
 CFLAGSDYN = libdynaprof.a
 
 default:
+	cp ../../../zcatoggle/src/include/zca-toggle.hpp .
+	cp ../../../zcatoggle/src/include/zca-types.hpp .
+	cp ../../../zcatoggle/build/libzca-toggle.a .
 	./make_source.sh ${COMPILE_ARGS}
 	$(CC) $(CFLAGS) 32_StartProfilerOverhead.cpp $(CFLAGSZCA) -o 32_StartProfilerOverhead.exe
 
@@ -11,5 +14,5 @@ run:
 	./32_StartProfilerOverhead.exe
 
 clean:
-	rm -f *.exe *.o *.s *.csv 32_StartProfilerOverhead.cpp
+	rm -f *.exe *.o *.s *.csv 32_StartProfilerOverhead.cpp libzca-toggle.a
 
