--- a/microbenchmarks/sigtrap/Makefile
+++ b/microbenchmarks/sigtrap/Makefile
@@ -1,14 +1,19 @@
-CC = icc
-VTCC = vtcc -vt:cc icc
-CFLAGS = 
+
+# CC = icc
+CC = gcc
+CFLAGS = -O3
+
 all: main.exe 
 # main_vt.exe
 
 main.exe: main.c
-	$(CC) -fast $(CFLAGS) main.c -o main.exe
+	$(CC) $(CFLAGS) main.c -o main.exe
 
 main_vt.exe: main.c
 	$(VTCC) $(CFLAGS) main.c -o main_vt.exe
+
+run:
+	./main.exe
 
 clean:
 	rm -f main.exe main_vt.exe *.o *.z *.otf *.thumb *.uctl *.def *.events
