--- a/microbenchmarks/Makefile
+++ b/microbenchmarks/Makefile
@@ -9,6 +9,10 @@ ifeq ($(CABAL),)
   CABAL=cabal
 endif
 
+ifeq ($(MACHINECLASS),)
+  MACHINECLASS=$(HOSTNAME)
+endif
+
 ifeq ($(JENKINS_GHC),)
   JENKINS_GHC=7.8.2
 endif
@@ -32,7 +36,7 @@ lib:
 
 # Run the benchmarks
 bench: lib run-benchmarks.exe
-	./run-benchmarks.exe --keepgoing --trials=$(TRIALS) --name="Dynaprof_Benchmarks" --fusion-upload --clientid=$(CID) --clientsecret=$(SEC) $(WHICHBENCH)
+	./run-benchmarks.exe --hostname=$(MACHINECLASS) --keepgoing --trials=$(TRIALS) --name="Dynaprof_Benchmarks" --fusion-upload --clientid=$(CID) --clientsecret=$(SEC) $(WHICHBENCH)
 
 run-benchmarks.exe: run-benchmarks.cabal run-benchmarks.hs
 	$(CABAL) sandbox init --sandbox=../.cabal-sandbox/
