--- a/Plotting/Plotting.cabal
+++ b/Plotting/Plotting.cabal
@@ -46,9 +46,58 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 
-executable Plotting
+-- executable Plotting
+--   -- .hs or .lhs file containing the Main module.
+--   main-is:             Plot.hs
+  
+--   -- Modules included in this executable, other than Main.
+--   -- other-modules:       
+  
+--   -- LANGUAGE extensions used by modules in this package.
+--   -- other-extensions:    
+  
+--   -- Other library packages from which modules are imported.
+--   build-depends: base >=4.5 && <4.8
+--                , hsbencher >= 1.8.0.7
+--                , hsbencher-fusion >= 0.1.0.2
+--                , hsbencher-analytics >= 0.1.0.0 
+--                , handa-gdata >= 0.6.9.2               
+  
+--   -- Directories containing source files.
+--   -- hs-source-dirs:      
+  
+--   -- Base language which the package is written in.
+--   default-language:    Haskell2010
+  
+
+
+-- executable Overhead
+--   -- .hs or .lhs file containing the Main module.
+--   main-is:             Overhead.hs
+  
+--   -- Modules included in this executable, other than Main.
+--   -- other-modules:       
+  
+--   -- LANGUAGE extensions used by modules in this package.
+--   -- other-extensions:    
+  
+--   -- Other library packages from which modules are imported.
+--   build-depends: base >=4.5 && <4.8
+--                , hsbencher >= 1.8.0.7
+--                , hsbencher-fusion >= 0.1.0.2
+--                , hsbencher-analytics >= 0.1.0.0 
+--                , handa-gdata >= 0.6.9.2               
+  
+--   -- Directories containing source files.
+--   -- hs-source-dirs:      
+  
+--   -- Base language which the package is written in.
+--   default-language:    Haskell2010
+  
+
+executable FirstTimeInit
   -- .hs or .lhs file containing the Main module.
-  main-is:             Plot.hs
+  main-is:             FirstTimeInit.hs
   
   -- Modules included in this executable, other than Main.
   -- other-modules:       
@@ -69,11 +118,9 @@ executable Plotting
   -- Base language which the package is written in.
   default-language:    Haskell2010
   
-
-
-executable Overhead
+executable ResampleOverheadPlot
   -- .hs or .lhs file containing the Main module.
-  main-is:             Overhead.hs
+  main-is:             ResampleOverheadPlot.hs
   
   -- Modules included in this executable, other than Main.
   -- other-modules:       
