Update to use DYN_DISABLE_SELFTIMED=1

--- a/microbenchmarks/dynaprof/sampleOverhead/Makefile
+++ b/microbenchmarks/dynaprof/sampleOverhead/Makefile
@@ -21,7 +21,10 @@ compile:
 	$(CC) $(CFLAGS)  31_StartProfilerOverhead.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 31_StartProfilerOverhead.exe
 
 run:
-	DYN_STRATEGY=NO_BACKOFF ./31_StartProfilerOverhead.exe ${RUN_ARGS}
+	DYN_DISABLE_SELFTIMED=1 DYN_STRATEGY=NO_BACKOFF ./31_StartProfilerOverhead.exe ${RUN_ARGS}
+
+test:
+	$(MAKE) run RUN_ARGS="1 1 1000"
 
 clean:
 	rm -f *.exe *.o *.s *.csv 31_StartProfilerOverhead.cpp libzca-toggle.a libdynaprof.a prof.out
