--- a/microbenchmarks/dynaprof/sampleOverhead/Makefile
+++ b/microbenchmarks/dynaprof/sampleOverhead/Makefile
@@ -26,5 +26,9 @@ run:
 test:
 	$(MAKE) run RUN_ARGS="1 1 1000"
 
+lots:
+	for ((i=0; i<100; i++)); do make run RUN_ARGS="1 1 0" 2>1 | grep SELFTIMED: ; done \
+          | sed 's/SELFTIMED://' | tee samples.dat
+
 clean:
 	rm -f *.exe *.o *.s *.csv 31_StartProfilerOverhead.cpp libzca-toggle.a libdynaprof.a prof.out
