--- a/Plotting/Plotting.cabal
+++ b/Plotting/Plotting.cabal
@@ -46,28 +46,29 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 
--- executable Plotting
---   -- .hs or .lhs file containing the Main module.
---   main-is:             Plot.hs
+executable PercentCount
+  -- .hs or .lhs file containing the Main module.
+  main-is:             PercentCount.hs
   
---   -- Modules included in this executable, other than Main.
---   -- other-modules:       
+  -- Modules included in this executable, other than Main.
+  -- other-modules:       
   
---   -- LANGUAGE extensions used by modules in this package.
---   -- other-extensions:    
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:    
   
---   -- Other library packages from which modules are imported.
---   build-depends: base >=4.5 && <4.8
---                , hsbencher >= 1.8.0.7
---                , hsbencher-fusion >= 0.1.0.2
---                , hsbencher-analytics >= 0.1.0.0 
---                , handa-gdata >= 0.6.9.2               
+  -- Other library packages from which modules are imported.
+  build-depends: base >=4.5 && <4.8
+               , hsbencher >= 1.8.0.7
+               , hsbencher-fusion >= 0.1.0.2
+               , hsbencher-analytics >= 0.1.0.0 
+               , handa-gdata >= 0.6.9.2
+               , split               
   
---   -- Directories containing source files.
---   -- hs-source-dirs:      
+  -- Directories containing source files.
+  -- hs-source-dirs:      
   
---   -- Base language which the package is written in.
---   default-language:    Haskell2010
+  -- Base language which the package is written in.
+  default-language:    Haskell2010
   
 
 
@@ -141,3 +142,51 @@ executable ResampleOverheadPlot
   -- Base language which the package is written in.
   default-language:    Haskell2010
   
+
+
+executable BenchOH1
+  -- .hs or .lhs file containing the Main module.
+  main-is:             BenchOH1.hs
+  
+  -- Modules included in this executable, other than Main.
+  -- other-modules:       
+  
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:    
+  
+  -- Other library packages from which modules are imported.
+  build-depends: base >=4.5 && <4.8
+               , hsbencher >= 1.8.0.7
+               , hsbencher-fusion >= 0.1.0.2
+               , hsbencher-analytics >= 0.1.0.0 
+               , handa-gdata >= 0.6.9.2               
+  
+  -- Directories containing source files.
+  -- hs-source-dirs:      
+  
+  -- Base language which the package is written in.
+  default-language:    Haskell2010
+
+
+executable BenchOH2
+  -- .hs or .lhs file containing the Main module.
+  main-is:             BenchOH2.hs
+  
+  -- Modules included in this executable, other than Main.
+  -- other-modules:       
+  
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:    
+  
+  -- Other library packages from which modules are imported.
+  build-depends: base >=4.5 && <4.8
+               , hsbencher >= 1.8.0.7
+               , hsbencher-fusion >= 0.1.0.2
+               , hsbencher-analytics >= 0.1.0.0 
+               , handa-gdata >= 0.6.9.2               
+  
+  -- Directories containing source files.
+  -- hs-source-dirs:      
+  
+  -- Base language which the package is written in.
+  default-language:    Haskell2010
