Change sampleOverhead bench

--- a/microbenchmarks/dynaprof/sampleOverhead/Makefile
+++ b/microbenchmarks/dynaprof/sampleOverhead/Makefile
@@ -7,6 +7,15 @@ ifeq ($(COMPILE_ARGS),)
   COMPILE_ARGS= 10
 endif
 
+ifeq ($(CPU),)
+  CPU=3
+endif
+
+ifeq ($(LOTS),)
+  LOTS=500
+endif
+
+
 default: generate compile
 
 generate: 31_StartProfilerOverhead.cp1 31_StartProfilerOverhead.cp2
@@ -21,13 +30,13 @@ compile:
 	$(CC) $(CFLAGS)  31_StartProfilerOverhead.cpp $(CFLAGSDYN) $(CFLAGSZCA) -o 31_StartProfilerOverhead.exe
 
 run:
-	DYN_DISABLE_SELFTIMED=1 DYN_STRATEGY=NO_BACKOFF time ./31_StartProfilerOverhead.exe ${RUN_ARGS}
+	DYN_DISABLE_SELFTIMED=1 DYN_STRATEGY=NO_BACKOFF time taskset -c $(CPU) ./31_StartProfilerOverhead.exe ${RUN_ARGS}
 
 test:
 	$(MAKE) run RUN_ARGS="1 1 1000"
 
 lots:
-	for ((i=0; i<500; i++)); do make run RUN_ARGS="1 1 0" 2>1 | grep SELFTIMED: ; done \
+	for ((i=0; i < $(LOTS); i++)); do make run RUN_ARGS="1 1 0" 2>1 | grep SELFTIMED: ; done \
           | sed 's/SELFTIMED://' | tee samples.dat
 
 clean:
