Adding parameter patching code

--- a/instrumentors/finstrument/tests/Makefile
+++ b/instrumentors/finstrument/tests/Makefile
@@ -1,6 +1,7 @@
 
 ARGS= -g -Wall
 LDFLAGS  = -Bsymbolic -fPIC -Wl,--hash-style=sysv -shared
+# CFLAGS=-O3
 
 CC = icc $(ARGS)
 CPP = icpc -std=c++11 $(ARGS)
@@ -11,7 +12,7 @@ AR = ar
 RM = rm
 OPTS =
 
-CODE = tests.cpp
+CODE = tests.c 
 OBJ0 = $(CODE:.cpp=.o)
 OBJ  = $(OBJ0:.c=.o)
 
@@ -24,23 +25,46 @@ OBJ  = $(OBJ0:.c=.o)
 
 all: tests
 
-run_c:
-	$(CC) tests.o ../src/cyg_functions.o -o tests.exe
+run_c: 
+	# $(CPP) $(CFLAGS) $(OPTS) -c -o tests.o tests.c 
+	$(CC) $(CFLAGS) $(OPTS) -finstrument-functions -g -c -o tests.o tests.c
+	$(CPP) $(CFLAGS) $(OPTS) -c -o cyg_functions.o ../src/cyg_functions.cpp
+	$(CPP) tests.o cyg_functions.o -o tests.exe
 	./tests.exe 
 
-run_cpp:
+run_cpp: $(OBJ)
+	cd ../src;make clean;make
+	$(CPP) $(CFLAGS) $(OPTS) -finstrument-functions -g -c -o tests.o tests.c
 	$(CPP) tests.o ../src/cyg_functions.o -o tests.exe
 	./tests.exe 
 
-runso_c:
+runso_c: 
+	# cd ../src;make clean;make
+	$(CC) $(CFLAGS) $(OPTS) -finstrument-functions -g -c -o tests.o tests.c
 	$(CC) -shared -Wl,-soname,libinst.so -o libinst.so ../src/cyg_functions.o -lc
 	$(CC) -L. -linst tests.o -o tests.exe
 	LD_LIBRARY_PATH=.:$(LD_LIBRARY_PATH) ./tests.exe
 
-runso_cpp:
+runso_cpp: $(OBJ)
 	$(CPP) -shared -Wl,-soname,libinst.so -o libinst.so ../src/cyg_functions.o -lc
 	$(CPP) -L. -linst tests.o -o tests.exe
 	LD_LIBRARY_PATH=.:$(LD_LIBRARY_PATH) ./tests.exe
+
+time_so:
+	cd ../src;make clean;make
+	# $(CC) -g -c -o time.o time.c
+	# $(CC) -lrt time.o -o time.exe
+	# ./time.exe
+	$(CC) -finstrument-functions -g -c -o time.o time.c
+	$(CC) -shared -Wl,-soname,libinst.so -o libinst.so ../src/cyg_functions.o -lc
+	$(CC) -L. -linst -lrt time.o -o time.exe
+	LD_LIBRARY_PATH=.:$(LD_LIBRARY_PATH) ./time.exe
+
+time:
+	cd ../src;make clean;make
+	$(CC) -finstrument-functions -g -c -o time.o time.c
+	$(CC) -lrt time.o ../src/cyg_functions.o -o time.exe
+	./time.exe
 
 tests: $(OBJ)  
 	cd ../src;make clean;make
@@ -61,5 +85,16 @@ tests: $(OBJ)
 	@echo "========================================"
 	make runso_cpp
 
+exp: $(OBJ)
+	$(CC) -c -o funcs.o funcs.c
+	$(CC) funcs.o tests.o -o tests.exe
+	./tests.exe
+
+exp_so: $(OBJ)
+	$(CC) -fPIC -c -o funcs.o funcs.c
+	$(CC) -shared -Wl,-soname,libex.so -o libex.so funcs.o -lc
+	$(CC) -L. -lex tests.o -o tests.exe
+	LD_LIBRARY_PATH=.:$(LD_LIBRARY_PATH) ./tests.exe
+
 clean:
-	$(RM) -f $(OBJ) tests.exe *.so *.o
+	$(RM) -f $(OBJ) *.exe *.so *.o
