More experimental changes

--- a/instrumentors/finstrument/src/Makefile
+++ b/instrumentors/finstrument/src/Makefile
@@ -2,16 +2,18 @@
 ARGS= -g -Wall
 LDFLAGS  = -Bsymbolic -fPIC -Wl,--hash-style=sysv -shared
 
-CC = icc $(ARGS)
-CPP = icpc -std=c++11 $(ARGS)
-# CC = gcc $(ARGS)
-# CPP = g++ -std=c++0x $(ARGS)
+COMP = icc
+# CC = icc $(ARGS)
+# CPP = icpc -std=c++11 $(ARGS)
+# COMP = gcc
+CC = gcc $(ARGS)
+CPP = g++ -std=c++0x $(ARGS)
 
 AR = ar
 RM = rm
 OPTS = 
 
-CODE = finstrumentor.cpp cyg_functions.cpp
+CODE = finstrumentor.cpp cyg_functions.cpp 
 OBJ0 = $(CODE:.cpp=.o)
 OBJ  = $(OBJ0:.c=.o)
 
@@ -20,6 +22,9 @@ OBJ  = $(OBJ0:.c=.o)
 all: build
 
 build: $(OBJ) 
+
+distorm: 
+	cd ../../../deps/distorm/make/linux;make clean;make CC=$(COMP)
 
 .cpp.o:
 	  $(CPP) $(CFLAGS) $(OPTS) -fPIC -c -Wall -o $@ $<
