1. Fixing finstrument probe activation/deactivation bugs 2. Adding ubiprof profiler api with fixed backoff profiler

--- a/profilers/tests/Makefile
+++ b/profilers/tests/Makefile
@@ -1,7 +1,7 @@
 
 ARGS= -g -Wall
 LDFLAGS  = -Bsymbolic -fPIC -Wl,--hash-style=sysv -shared
-CFLAGS=-O3
+CFLAGS=-O2
 
 CC = icc $(ARGS)
 CPP = icpc -std=c++11 $(ARGS)
@@ -14,50 +14,58 @@ AR = ar
 RM = rm
 OPTS =
 
+DEPS = ../../deps/distorm/distorm3.a
+
 CODE = c_test.c cpp_test.cpp
 OBJ0 = $(CODE:.cpp=.o)
 OBJ  = $(OBJ0:.c=.o)
 
+INST_SRC_C := $(wildcard ../../instrumentors/finstrument/src/*.c)
+INST_SRC_CPP:= $(wildcard ../../instrumentors/finstrument/src/*.cpp)
+INST_SRC := $(INST_SRC_C)$(INST_SRC_CPP)
+
+INST_OBJ0 = $(INST_SRC:.cpp=.o)
+INST_OBJ = $(INST_OBJ0:.c=.o)
+
+PROF_SRC_C := $(wildcard ../src/*.c)
+PROF_SRC_CPP:= $(wildcard ../src/*.cpp)
+PROF_SRC := $(PROF_SRC_C)$(PROF_SRC_CPP)
+
+PROF_OBJ0 = $(PROF_SRC:.cpp=.o)
+PROF_OBJ = $(PROF_OBJ0:.c=.o)
+
 .PHONY: all build tests 
 
 .cpp.o:
-	    $(CPP) $(CFLAGS) $(OPTS) -finstrument-functions -g -c -o $@ $<
+	    $(CPP) $(CFLAGS) $(OPTS) -finstrument-functions -fno-optimize-sibling-calls -g -c -o $@ $<
 .c.o:
-	    $(CC) $(CFLAGS) $(OPTS) -finstrument-functions -g -c -o $@ $<
+	    $(CC) $(CFLAGS) $(OPTS) -finstrument-functions -fno-optimize-sibling-calls -g -c -o $@ $<
 
 all: tests
 
-run_c: $(OBJ)
-	cd ../src;make clean;make
-	# $(CPP) $(CFLAGS) $(OPTS) -c -o tests.o tests.c 
-	# $(CC) $(CFLAGS) $(OPTS) -finstrument-functions -g -c -o tests.o tests.c
-	# $(CPP) $(CFLAGS) $(OPTS) -c -o finstrumentor.o ../src/finstrumentor.cpp
-	# $(CPP) $(CFLAGS) $(OPTS) -c -o cyg_functions.o ../src/cyg_functions.cpp
-	$(CC) c_test.o ../src/cyg_functions.o ../src/finstrumentor.o ../../../deps/distorm/distorm3.a -o tests.exe
-	# $(CPP) tests.o cyg_functions.o finstrumentor.o ../../../deps/capstone/libcapstone.a -o tests.exe
+inst:
+	cd ../../instrumentors/finstrument/src;make clean;make
+
+run_c: $(OBJ) inst 
+	cd ../src;make clean;make build
+	$(CPP) c_test.o $(PROF_OBJ) $(INST_OBJ) $(DEPS) -o tests.exe
 	./tests.exe 
 
-run_cpp: $(OBJ)
-	cd ../src;make clean;make
-	# $(CPP) $(CFLAGS) $(OPTS) -finstrument-functions -g -c -o tests.o tests.cpp
-	# $(CPP) $(CFLAGS) $(OPTS) -c -o cyg_functions.o ../src/cyg_functions.cpp
-	$(CPP) cpp_test.o ../src/cyg_functions.o ../src/finstrumentor.o ../../../deps/distorm/distorm3.a -o tests.exe
-	# $(CPP) tests.o ../src/cyg_functions.o -o tests.exe
+run_cpp: $(OBJ) inst
+	cd ../src;make clean;make build
+	$(CPP) cpp_test.o $(PROF_OBJ) $(INST_OBJ) $(DEPS) -o tests.exe
 	./tests.exe 
 
-runso_c: $(OBJ)
-	cd ../src;make clean;make
-	#$(CPP) $(CFLAGS) $(OPTS) -finstrument-functions -g -c -o tests.o tests.cpp
-	# $(CC) $(CFLAGS) $(OPTS) -finstrument-functions -g -c -o tests.o tests.c
-	$(CC) -shared -Wl,-soname,libinst.so -o libinst.so ../src/cyg_functions.o ../src/finstrumentor.o ../../../deps/distorm/distorm3.a -lc
-	$(CC) -L. -linst c_test.o -o tests.exe
-	LD_LIBRARY_PATH=.:$(LD_LIBRARY_PATH) ./tests.exe
+runso_c: $(OBJ) inst
+	cd ../src;make clean;make install
+	$(CC) -L../../build -lubiprof c_test.o -o tests.exe
+	LD_LIBRARY_PATH=../../build:$(LD_LIBRARY_PATH) ./tests.exe
 
-runso_cpp: $(OBJ)
-	cd ../src;make clean;make
-	$(CPP) -shared -Wl,-soname,libinst.so -o libinst.so ../src/cyg_functions.o ../src/finstrumentor.o ../../../deps/distorm/distorm3.a -lc
-	$(CPP) -L. -linst cpp_test.o -o tests.exe
-	LD_LIBRARY_PATH=.:$(LD_LIBRARY_PATH) ./tests.exe
+runso_cpp: $(OBJ) inst
+	cd ../src;make clean;make install
+#	$(CPP) -shared -Wl,-soname,libinst.so -o libinst.so ../src/cyg_functions.o ../src/finstrumentor.o ../../../deps/distorm/distorm3.a -lc
+	$(CPP) -L../../build -lubiprof cpp_test.o -o tests.exe
+	LD_LIBRARY_PATH=../../build:$(LD_LIBRARY_PATH) ./tests.exe
 
 time_so:
 	cd ../src;make clean;make
@@ -106,4 +114,6 @@ exp_so: $(OBJ)
 	LD_LIBRARY_PATH=.:$(LD_LIBRARY_PATH) ./tests.exe
 
 clean:
-	$(RM) -f $(OBJ) *.exe *.so *.o
+	cd ../../instrumentors/finstrument/src; $(RM) -f $(OBJ) *.exe *.so *.o
+	cd ../src; $(RM) -f $(OBJ) *.exe *.so *.o
+	$(RM) -f $(OBJ) *.exe *.so *.o 
